fix top spacing

--- a/src/scss/Pico.scss
+++ b/src/scss/Pico.scss
@@ -103,7 +103,7 @@ canvas {
 }
 
 #touch_controls_gfx {
-  top: -20svh;
+  // top: -20svh;
 }
 
 #controls_left_panel {
